change remote pricing

--- a/app/views/algorithm_lessons/lessons/lesson_10.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_10.html.erb
@@ -19,8 +19,21 @@
   <li>Make all tests pass</li>
 </ol>
 
+<h2>Getting Started</h2>
+
+<ol>  
+  <li>Open the <code>bsort</code> folder inside the <code>data_structures_and_algorithms</code> folder</li>
+  <li>Run <code>bundle</code></li>
+  <li>Run <code>bundle exec rspec</code> to run the tests</li>
+  <li>Make the tests pass</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
+</ol>
+
 <h2>Hints</h2>
 
 <p>
   Once you have managed to place the tree nodes in the correct position, you will have to return an array for the tests to pass. To create an array of sorted elements, you can traverse the tree using depth first search and build an array of sorted elements.
 </p>
+
+<% @submission_form = true %>
