--- a/app/views/algorithm_lessons/lessons/lesson_5.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_5.html.erb
@@ -33,6 +33,18 @@
     <li>In-place means to rotate the matrix without creating a new array to hold the rotated matrix</li>
   </ul>
   <li>Make sure all tests pass</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
+</ol>
+
+<h2>Getting Started</h2>
+
+<ol>
+  <li>Clone the <%= link_to 'Data Structures and Algorithms Repository', 'https://github.com/TECHRISE/data_structures_and_algorithms', target: '_blank' %></li>
+  <li>Open the <code>rotate_matrix</code> folder</li>
+  <li>Run <code>bundle</code></li>
+  <li>Run <code>bundle exec rspec</code> to run the tests</li>
+  <li>Make the tests pass</li>
 </ol>
 
 <h2>Hints</h2>
@@ -40,3 +52,5 @@
 <p>
   To get started, take a piece of paper and a pen and solve it by hand. Once you have solved it by hand, observe step by step how you actually managed to solve it. Take that logic and transfer it into code.
 </p>
+
+<% @submission_form = true %>
