--- a/app/views/algorithm_lessons/lessons/lesson_8.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_8.html.erb
@@ -95,7 +95,18 @@ node1.next_node = node2
   <li>Implement the <code>reverse_linked_list_in_place</code> method that reverses the order of the linked list in place. This means reversing the linked list without creating any new instance of any data structure.</li>
   <li>Implement the <code>detect_cycle</code> method</li>
   <li>Make all tests pass</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
 </ol> 
+
+<h2>Getting Started</h2>
+
+<ol>  
+  <li>Open the <code>reverse_linked_list</code> folder inside the <code>data_structures_and_algorithms</code> folder</li>
+  <li>Run <code>bundle</code></li>
+  <li>Run <code>bundle exec rspec</code> to run the tests</li>
+  <li>Make the tests pass</li>
+</ol>
 
 <h2>Hint</h2>
 
