--- a/app/views/algorithm_lessons/lessons/lesson_9.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_9.html.erb
@@ -41,6 +41,17 @@ end
   <li>Implement Depth First Search</li>
   <li>Implement Breadth First Search</li>
   <li>Make all tests pass</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
+</ol>
+
+<h2>Getting Started</h2>
+
+<ol>  
+  <li>Open the <code>tree_traversal</code> folder inside the <code>data_structures_and_algorithms</code> folder</li>
+  <li>Run <code>bundle</code></li>
+  <li>Run <code>bundle exec rspec</code> to run the tests</li>
+  <li>Make the tests pass</li>
 </ol>
 
 <h2>Hints</h2>
