--- a/app/views/algorithm_lessons/lessons/lesson_11.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_11.html.erb
@@ -2,4 +2,9 @@
 <ol>
   <li>Read about <%= link_to 'bubble sort', 'https://www.tutorialspoint.com/data_structures_algorithms/bubble_sort_algorithm.htm', target: '_blank' %></li>
   <li>Implement bubble sort in Ruby</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
 </ol>
+
+<% @submission_form = true %>
+
