--- a/app/views/algorithm_lessons/lessons/lesson_13.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_13.html.erb
@@ -2,4 +2,8 @@
 <ol>
   <li>Read about <%= link_to 'insertion sort', 'https://www.tutorialspoint.com/data_structures_algorithms/insertion_sort_algorithm.htm', target: '_blank' %></li>
   <li>Implement insertion sort in Ruby</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
 </ol>
+
+<% @submission_form = true %>
