--- a/app/views/algorithm_lessons/lessons/lesson_7.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_7.html.erb
@@ -19,6 +19,17 @@
   <li>Implement the <code>size</code> method, which returns the size of the queue</li>
   <li>Implement the <code>empty?</code> method, which returns <code>true</code> if the queue is empty and <code>false</code> if it is not empty</li>
   <li>Make all tests pass</li>
+  <li>Push the code to your github account</li>
+  <li>Submit a link to your github repository</li>
+</ol>
+
+<h2>Getting Started</h2>
+
+<ol>  
+  <li>Open the <code>queues</code> folder inside the <code>data_structures_and_algorithms</code> folder</li>
+  <li>Run <code>bundle</code></li>
+  <li>Run <code>bundle exec rspec</code> to run the tests</li>
+  <li>Make the tests pass</li>
 </ol>
 
 <h2>Hints</h2>
