--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -19,8 +19,8 @@
                 </div><!-- col-xs-12 col-md-6 -->
 
                 <div class="col-xs-12 col-md-6">
-                  <h3>3,980 NPR</h3> 
-                  <h5>Total Cost *</h5>               
+                  <h3>4,500 NPR</h3> 
+                  <h5>Total Cost</h5>               
                 </div><!-- col-xs-12 col-md-6 -->
               </div><!-- row -->
             </div><!-- program-box-highlights -->
@@ -45,9 +45,6 @@
                   </ul>
                 </div><!-- col-xs-12 col-md-6 -->
 
-                <div class="extra-info">
-                  <small>* 13% VAT not included</small>
-                </div>
               </div><!-- row -->
             </div><!-- program-box-details -->
 
