revise algorithm lesson

--- a/app/views/algorithm_lessons/lessons/lesson_1.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_1.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  At first, solving these challenges will take you a long time. <strong>Expect to struggle with these problems.</strong> For a lot of these challenges, you could easily find the answers on Google since they are common interview questions.
+  At first, solving these challenges will take you a long time. <strong>Expect to struggle with these problems.</strong> For a lot of the problems, you could easily find the answers on Google since they are common interview questions.
 </p>
 
 <p>
@@ -19,5 +19,5 @@
 </p>  
 
 <p>
-  Get ready to practice some data structures and algorithms!
+  So don't copy and paste - solve them yourself. Get ready to practice some data structures and algorithms!
 </p>
