--- a/app/views/algorithm_lessons/lessons/lesson_6.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_6.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <strong>Stacks have two main operations, <strong>push</strong> and <code>pop</code></strong>. You can <strong><em>push</em></strong> elements into the stack (putting a dish on the stack), or you can <strong><em>pop</em></strong> elements from the stack (taking a dish from the stack).
+  <strong>Stacks have two main operations, <code>push</code> and <code>pop</code></strong>. You can <strong><em>push</em></strong> elements into the stack (putting a dish on the stack), or you can <strong><em>pop</em></strong> elements from the stack (taking a dish from the stack).
 </p>  
 
 <p>
