--- a/app/views/algorithm_lessons/lessons/lesson_2.html.erb
+++ b/app/views/algorithm_lessons/lessons/lesson_2.html.erb
@@ -77,7 +77,7 @@ end
 </ol>
 
 <p>
-  These kind of algorithms run in <strong>linear time</strong>, or <code>Big-O of O(N)</code>, where N is the number of elements in the algorithm.
+  These kind of algorithms run in <strong>linear time</strong>, or in other words, has a <strong>Big-O of O(N)</strong>, where N is the number of elements in the algorithm.
 </p>
 
 <h2>Polynomial Time</h2>
@@ -118,11 +118,11 @@ end
 <h2>Logarithmic Time Algorithms</h2>
 
 <p>
-  Let's take an example of a phone book. If were to look for the phone number of <strong>John Smith</strong> in a phone book that contains 1,000,000 names, how would we do it?
+  Let's take an example of a phone book. If we were to look for the phone number of <strong>John Smith</strong> in a phone book that contains 1,000,000 names, how would we do it?
 </p>
 
 <p>
-  One way to do it would be to open up to the middle, take the 500,000th name, and compare it to "Smith". If the name happens to be "Smith, John", then we were super lucky and found the name we were looking for. However, most likely we won't be lucky, in which case we will determine if "John Smith" is before or fater that name.
+  One way to do it would be to open up to the middle, take the 500,000th name, and compare it to "Smith". If the name happens to be "Smith, John", then we were super lucky and found the name we were looking for. However, most likely we won't be lucky, in which case we will determine if "John Smith" is before or after that name.
 </p>  
 
 <p>
