--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -8,17 +8,17 @@
       <div class="col-xs-12 col-md-6">
         <h1>Immersive Program Highlights</h1> 
 
-        <p class="program-highlights-details">Immersive | 8 weeks | 12,000 NPR</p>
+        <p class="program-highlights-details">Immersive | 6,000 NPR / Month</p>
 
         <p class="program-highlights-description">
           TECHRISE focuses on maximizing the student's learning progress and providing various opportunities.
         </p>  
 
 
-        <span class="highlight-checkbox">16 Personal Mentor Sessions at the TECHRISE Campus</span>
+        <span class="highlight-checkbox">8 Personal Mentor Sessions per Month</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>        
-
+        <span class="highlight-checkbox">Interview Preperation / Mock Interviews</span>        
         
 
         <!-- <span class="highlight-checkbox">Workshops/Review Sessions</span>
@@ -40,7 +40,7 @@
           
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
+            <%= link_to 'Apply for TECHRISE Core Immersive', 'https://goo.gl/forms/px1Qdlwmx2XmQ5MT2', target: '_blank', class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
           </div>
         </div>
         
@@ -196,9 +196,9 @@
         <%= image_tag 'details/physics.png' %>
       </div>
       <div class="col-md-8">
-        <h3>Learn from experienced engineers and entrepreneurs</h3>
+        <h3>Weekly Office Hours and Workshops</h3>
         <p>
-          We hold workshops and events every other week, where we call in guest speakers who are dedicated and passionate about what they do. Get inspired and gain insights from leaders who have actual experience in the field. Network, and get potential leads to your future career!
+          We hold weekly office hours where the community gathers virtually online and asks questions, while we try to answer them. We also hold virtual workshops to go in depth about certain topics.
         </p>
       </div>
     </div>  
@@ -210,7 +210,7 @@
   <div class="container">
     <h1>Tuition Fees</h1>
     <div class="payment-details">
-      <div class="payment-price">12,000 NPR</div>
+      <div class="payment-price">6,000 NPR</div>
 
       <div class="row">
         <div class="col-xs-12 col-md-4">
@@ -238,7 +238,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-4">
-        <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary btn-block text-center' %>
+        <%= link_to 'Apply for TECHRISE Core Immersive', 'https://goo.gl/forms/px1Qdlwmx2XmQ5MT2', target: '_blank', class: 'btn btn-cta btn-cta-primary btn-block text-center' %>
       </div>
     </div>
 
