--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -15,7 +15,7 @@
       <div class="col-xs-12 col-md-6">
         <h1>Remote Program Highlights</h1> 
 
-        <p class="program-highlights-details">Remote | 4 weeks | 4,500 NPR (Extendible)</p>
+        <p class="program-highlights-details">Remote | 4,500 NPR / Month</p>
 
         <p class="program-highlights-description">
           Learn at your own pace remotely through our complete online course.
@@ -25,18 +25,7 @@
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>
 
-        <!-- <span class="highlight-checkbox">Workshops/Review Sessions</span>
-        <span class="highlight-checkbox">Outside Speakers from the industry</span>
-        <span class="highlight-checkbox">Lifetime Access to Curriculum</span> -->
-        
-        <!-- <h2>This course is perfect if you…</h2>
-        <ul>
-          <li>Want to become a professional web developer</li>
-          <li>Want to have frequent guidance from personalised mentors</li>
-          <li>Want experience working on real world projects</li>
-          <li>Want to get direct advice and guidance from industry leaders</li>
-          <li>Want to learn Ruby on Rails  - a hugely popular framework all over the world, especially for startups</li>
-        </ul> -->
+
       </div><!-- col-xs-12 col-md-6 -->
 
       <div class="col-xs-12 col-md-6">
@@ -44,7 +33,7 @@
 
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
+            <%= link_to 'Apply for TECHRISE Core Remote', 'https://goo.gl/forms/px1Qdlwmx2XmQ5MT2', target: '_blank', class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
           </div>
         </div>
 
@@ -225,17 +214,13 @@
             Clarify any questions you might have by asking them at anytime. TECHRISE mentors will try to respond as quickly as possible.
           </p>
         </div>
-
-        <div class="col-xs-12">
-          <p><small>* You can also extend your course at an additional 4,000 NPR per month.</small></p>
-        </div>
         
       </div><!-- row -->
     </div><!-- payment-details -->
 
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-4">
-        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block' %>
+        <%= link_to 'Apply for TECHRISE Core Remote', 'https://goo.gl/forms/px1Qdlwmx2XmQ5MT2', target: '_blank', class: 'btn btn-cta btn-cta-primary btn-lg center-block' %>
       </div>
     </div>
   </div><!-- container -->
