--- a/app/views/static_pages/_cta_content.html.erb
+++ b/app/views/static_pages/_cta_content.html.erb
@@ -2,4 +2,4 @@
 <p class="intro">We are an innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
 </p>
 
-<%= link_to 'Apply Now', apply_path, class: 'btn btn-cta btn-cta-primary' %>
+<%= link_to 'Apply Now', 'https://goo.gl/forms/px1Qdlwmx2XmQ5MT2', target: '_blank', class: 'btn btn-cta btn-cta-primary' %>
