add admitted students

--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -11,9 +11,9 @@
       </tr>
 
       <tr>
-        <td><strong>Cost / Month</strong></td>
-        <td>4,500 NPR</td>  
-        <td>6,000 NPR</td>
+        <td><strong>Cost</strong></td>
+        <td>4,500 NPR/Month</td>  
+        <td>6,000 NPR/Month</td>
       </tr>
 
       <tr>
@@ -47,13 +47,7 @@
       </tr>
 
       <tr>
-        <td><strong>Study At Your Own Pace</strong></td>
-        <td><i class="fa fa-check" aria-hidden="true"></i></td>
-        <td><i class="fa fa-check" aria-hidden="true"></i></td>
-      </tr>
-
-      <tr>
-        <td><strong>Hiring Opportunities for Top Graduates</strong></td>
+        <td><strong>Internship Opportunities for Top Graduates</strong></td>
         <td></td>
         <td><i class="fa fa-check" aria-hidden="true"></i></td>
       </tr>
