add strong params

--- a/app/views/admin_dashboard/admitted_students.html.erb
+++ b/app/views/admin_dashboard/admitted_students.html.erb
@@ -7,7 +7,7 @@
   <tr>
     <th>Start Date</th>
     <th>Graduation Date</th>
-    <th>Signed In</th>
+    <th>Last Signed In</th>
     <th>Name</th>
     <th>Email</th>
     <th>Phone</th>
