fix issue with nav

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -141,7 +141,7 @@
           </div><!--//item-->
           
           
-          <div class="feature-lead text-center">
+          <div class="feature-lead text-center">          
               <h4 class="title">Want to learn more about the TECHRISE curriculum?</h4>
               <p><a class="btn btn-cta btn-cta-secondary" href="curriculum.html">Take a Look</a></p>
           </div>
@@ -197,8 +197,8 @@
           </div>
 
           <div class="col-xs-12 col-md-4 col-md-offset-4">
-            <p class="hidden-xs"><a class="btn btn-cta btn-cta-primary center-block" href="curriculum.html" style="margin: 30px auto;">Take a look at the TECHRISE Curriculum</a></p>
-            <p class="visible-xs"><a class="btn btn-cta btn-cta-primary center-block" href="curriculum.html" style="margin: 30px auto;">The TECHRISE Curriculum</a></p>
+            <p class="hidden-xs hidden-md"><a class="btn btn-cta btn-cta-primary center-block" href="curriculum.html" style="margin: 30px auto;">Take a look at the TECHRISE Curriculum</a></p>
+            <p class="visible-xs visible-md"><a class="btn btn-cta btn-cta-primary center-block" href="curriculum.html" style="margin: 30px auto;">The TECHRISE Curriculum</a></p>
           </div>
 
       </div>
