--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -20,7 +20,8 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= csrf_meta_tags %>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />  
+<meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0" />
+ 
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
