--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -209,6 +209,8 @@
 
   <%= render 'founders' %>
 
+  <%= render 'advisors' %>
+
 
   <!-- ******Testimonials Section****** -->
   <%= render 'testimonials' %>
