add code for nepal logo

--- a/app/views/static_pages/_testimonials.html.erb
+++ b/app/views/static_pages/_testimonials.html.erb
@@ -8,7 +8,7 @@
           <div class="testimonial-card">
             <figure class="profile"><%= image_tag 'landing_page/rabin.jpg' %></figure>
             <div class="content">
-                <p><strong>Rabin Gaire</strong>, <span class="college">Student at ACHS College</span></p>
+                <p><strong>Rabin Gaire</strong><br/><span class="college">TECHRISE Fellow</span></p>
 
                 <div class="testimonial-card-break"></div>
 
@@ -25,7 +25,7 @@
           <div class="testimonial-card">
             <figure class="profile"><%= image_tag 'landing_page/swojeet.jpg' %></figure>
             <div class="content">
-                <p><strong>Swojeet Kayastha</strong>, <span class="college">Student at British College</span></p>
+                <p><strong>Swojeet Kayastha</strong><br/><span class="college">TECHRISE Fellow</span></p>
                 <div class="testimonial-card-break"></div>
 
                 <p>
@@ -41,7 +41,7 @@
           <div class="testimonial-card">
             <figure class="profile"><%= image_tag 'landing_page/shreejana.jpg' %></figure>
             <div class="content">
-                <p><strong>Shreejana Poudel</strong>, <span class="college">Student at ASCOL</span></p>
+                <p><strong>Shreejana Poudel</strong><br/><span class="college">TECHRISE Fellow</span></p>
 
                 <div class="testimonial-card-break"></div>
 
