--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -9,26 +9,9 @@
     <div class="story-container container text-center"> 
         <div class="story-container-inner" >                    
             <div class="about">
-                <p style="text-align: justify;"><span style="font-size: 25px;font-weight: 600;">The TECHRISE story comes from Takehiro’s passion for coding, Natsuko’s drive for social impact, and of course our love for Nepal.
-                </p>
                 <p>
-                    We knew that many of our Nepali friends were talented, smart and creative — but there weren’t many opportunities for good employment in the country.
+                    The core philosophy and belief of TECHRISE is that anyone can learn how to code with the proper guidance and education system.
                 </p>
-                <p>
-                    What if we could teach them how to code - a skill highly in demand all over the world? Our friends may be able to earn a global wage without ever having to leave their home country Nepal. 
-                </p>
-
-                <p style="text-align: justify;">
-                  We believe that coding has the potential to change lives and turn dreams into reality. That’s why we started TECHRISE.
-                </p> 
-
-                <div class="col-xs-12 text-center">
-                    <blockquote class="belife">
-                        This is our way of sharing happiness.<br>
-                        One line of code at a time.<br>
-                        <small>TECHRISE team</small>
-                    </blockquote>
-                </div>       
             </div><!--//about-->
         </div><!--//story-container-inner --> 
     </div><!-- story-container -->
@@ -125,7 +108,7 @@
                 
                 <h3>Takehiro Mouri</h3>
                 <p>
-                    Takehiro is a Ruby on Rails developer passionate about teaching and learning. Takehiro has worked with multiple startups along as handling numerous freelance software engineering projects. Graduate of The Firehose Project, a 15 week intensive web development training course, which inspired him and Natsuko to start TECHRISE. Multiple category winner at HackNC, one of the largest student based hackathons in the US, awarded the “Best Use of IBM Bluemix Technology Award”, “Best Use of Interactive Intelligence Award”, and “Most Startup Worthy Award”. Has won 1st place in multiple top-level presentation/speech contests in Japan, including receiving 1st prize in the Hong Kong Cup All Japan University Student Ambassadors English Program 2014-2015 and 1st prize in the 40th All Japan Youth English Oratorical Contest for the Mayor of Honolulu. Speaker at TEDxTokyoTeachers. Experience working as a freelancer, providing localization services to more than 10 major Japanese corporations and organizations. Main projects include the Mitsubishi Corporation Relations Committee 50th Anniversary Commemorative and the Shizuoka City Tourism Website.
+                    Takehiro is a Ruby on Rails developer passionate about teaching and learning. Takehiro has worked with multiple startups along as handling numerous freelance software engineering projects. Graduate of The Firehose Project, a 15 week intensive web development training course, which inspired him and Natsuko to start TECHRISE. Multiple category winner at HackNC, one of the largest student based hackathons in the US, awarded the “Best Use of IBM Bluemix Technology Award”, “Best Use of Interactive Intelligence Award”, and “Most Startup Worthy Award”. Has won 1st place in multiple top-level presentation/speech contests in Japan, including receiving 1st prize in the Hong Kong Cup All Japan University Student Ambassadors English Program 2014-2015 and 1st prize in the 40th All Japan Youth English Oratorical Contest for the Mayor of Honolulu. Speaker at TEDxTokyoTeachers.
                 </p>
 
                 <h3>Natsuko Robyn Shinozaki</h3>
