--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -220,7 +220,9 @@
     <div class="container text-center">
 
         <h2 class="title">Partnerships</h2>
-        <%= image_tag 'http://static1.squarespace.com/static/5390cc63e4b02566a5bb8bf0/t/539718f5e4b076c79e506193/1464376473863/?format=1500w', class: 'partnership_logo' %>        
+        <%= image_tag 'http://static1.squarespace.com/static/5390cc63e4b02566a5bb8bf0/t/539718f5e4b076c79e506193/1464376473863/?format=1500w', class: 'partnership_logo' %>  
+
+        <%= image_tag 'c4n.png', style: 'height: 80px' %>         
     </div>
   </section>
 
