--- a/app/views/filmster_lessons/lessons/lesson_14.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_14.html.erb
@@ -59,7 +59,7 @@ http://www.omdbapi.com/?s=superman
 </div>
 
 <p>
-  Now everytime we load the page, the AJAX request is going to be performed. Save the file and refresh the page. Your Google Chrome Developer Tools console should now display some data with movies that include "Spiderman" in the title.
+  Now everytime we load the page, the AJAX request is going to be performed. Save the file and refresh the page. Your Google Chrome Developer Tools console should now display some data with movies that include "superman" in the title.
 </p>
 
 <p>
