--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -18,7 +18,7 @@
         <span class="highlight-checkbox">8 Personal Mentor Sessions per Month</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>        
-        <span class="highlight-checkbox">Interview Preperation / Mock Interviews</span>        
+        <span class="highlight-checkbox">Interview Preparation / Mock Interviews</span>        
         
 
         <!-- <span class="highlight-checkbox">Workshops/Review Sessions</span>
