--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -9,8 +9,8 @@
 
 <%= render partial: 'program', locals: { sub_title: "Immersive | 8 weeks | 12,000 NPR", title: "TECHRISE Core Immersive", 
         description: "Learn to become a web developer through our immersive 8 week program. Have the full experience of working with a personal mentor twice a week, and attending extra workshops every other week to boost up your skills for your career. Our innovative platform combines an online curriculum and a strong community that is always there to help accelerate your path to becoming a professional web developer.",
-        detail_link: immersive_path, apply_link: apply_immersive_path } %>
+        detail_link: immersive_path, apply_link: "https://goo.gl/forms/px1Qdlwmx2XmQ5MT2" } %>
 
 <%= render partial: 'program', locals: { sub_title: "Online | Part-time | 1 month | 4,500 NPR", title: "TECHRISE Core Remote", 
         description: "Want to code from anywhere at anytime? Learn at your own pace remotely through our complete online course. Our one month package includes weekly Skype mentor sessions and access to the online forum where you can ask questions any time.",
-        detail_link: remote_path, apply_link: apply_remote_path } %>
+        detail_link: remote_path, apply_link: "https://goo.gl/forms/px1Qdlwmx2XmQ5MT2" } %>
